--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -347,6 +347,7 @@ $infoscreen_border_width: 5px;
     width: 100%;
     max-width: 500px;
     margin-bottom: 25px;
+    margin-top:10px;
 
 
 
@@ -354,7 +355,7 @@ $infoscreen_border_width: 5px;
         text-align: right;
         padding-bottom: 30px;
         position: absolute;
-        top: -30px;
+        top: -25px;
         right: 0px;
 
         a{
