--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6763,6 +6763,185 @@ ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
   border-bottom-color: rgba(0, 0, 0, 0.2);
   content: ''; }
 
+/*
+ * Datepicker for Bootstrap
+ *
+ * Copyright 2012 Stefan Petre
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ */
+.datepicker {
+  top: 0;
+  left: 0;
+  padding: 4px;
+  margin-top: 1px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  /*.dow {
+    border-top: 1px solid #ddd !important;
+  }*/ }
+
+.datepicker:before {
+  content: '';
+  display: inline-block;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #ccc;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: -7px;
+  left: 6px; }
+
+.datepicker:after {
+  content: '';
+  display: inline-block;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #ffffff;
+  position: absolute;
+  top: -6px;
+  left: 7px; }
+
+.datepicker > div {
+  display: none; }
+
+.datepicker table {
+  width: 100%;
+  margin: 0; }
+
+.datepicker td,
+.datepicker th {
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+
+.datepicker td.day:hover {
+  background: #eeeeee;
+  cursor: pointer; }
+
+.datepicker td.day.disabled {
+  color: #eeeeee; }
+
+.datepicker td.old,
+.datepicker td.new {
+  color: #999999; }
+
+.datepicker td.active,
+.datepicker td.active:hover {
+  color: #ffffff;
+  background-color: #006dcc;
+  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+  border-color: #0044cc #0044cc #002a80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #0044cc;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+
+.datepicker td.active:hover,
+.datepicker td.active:hover:hover,
+.datepicker td.active:focus,
+.datepicker td.active:hover:focus,
+.datepicker td.active:active,
+.datepicker td.active:hover:active,
+.datepicker td.active.active,
+.datepicker td.active:hover.active,
+.datepicker td.active.disabled,
+.datepicker td.active:hover.disabled,
+.datepicker td.active[disabled],
+.datepicker td.active:hover[disabled] {
+  color: #ffffff;
+  background-color: #0044cc;
+  *background-color: #003bb3; }
+
+.datepicker td.active:active,
+.datepicker td.active:hover:active,
+.datepicker td.active.active,
+.datepicker td.active:hover.active {
+  background-color: #003399 \9; }
+
+.datepicker td span {
+  display: block;
+  width: 47px;
+  height: 54px;
+  line-height: 54px;
+  float: left;
+  margin: 2px;
+  cursor: pointer;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+
+.datepicker td span:hover {
+  background: #eeeeee; }
+
+.datepicker td span.active {
+  color: #ffffff;
+  background-color: #006dcc;
+  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+  border-color: #0044cc #0044cc #002a80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #0044cc;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+
+.datepicker td span.active:hover,
+.datepicker td span.active:focus,
+.datepicker td span.active:active,
+.datepicker td span.active.active,
+.datepicker td span.active.disabled,
+.datepicker td span.active[disabled] {
+  color: #ffffff;
+  background-color: #0044cc;
+  *background-color: #003bb3; }
+
+.datepicker td span.active:active,
+.datepicker td span.active.active {
+  background-color: #003399 \9; }
+
+.datepicker td span.old {
+  color: #999999; }
+
+.datepicker th.switch {
+  width: 145px; }
+
+.datepicker th.next,
+.datepicker th.prev {
+  font-size: 21px; }
+
+.datepicker thead tr:first-child th {
+  cursor: pointer; }
+
+.datepicker thead tr:first-child th:hover {
+  background: #eeeeee; }
+
+.input-append.date .add-on i,
+.input-prepend.date .add-on i {
+  display: block;
+  cursor: pointer;
+  width: 16px;
+  height: 16px; }
+
 /*  Font Awesome
     the iconic font designed for use with Twitter Bootstrap
     -------------------------------------------------------
@@ -8643,6 +8822,8 @@ select {
   margin-left: 10px; }
   .turtle_weekmenu .btn.delete-item {
     margin-left: 5px; }
+.turtle_weekmenu input[type=text] {
+  width: 250px; }
 .turtle_weekmenu .listing {
   margin-top: 3px; }
   .turtle_weekmenu .listing > i {
@@ -8651,8 +8832,6 @@ select {
     float: left; }
   .turtle_weekmenu .listing input[type=file] {
     height: 10px; }
-  .turtle_weekmenu .listing input[type=text] {
-    width: 250px; }
   .turtle_weekmenu .listing .entry_image_holder {
     display: inline-block; }
   .turtle_weekmenu .listing form {
@@ -8830,91 +9009,3 @@ select {
     opacity: 0;
     background-color: transparent;
     color: transparent; }
-
-
-/* cards */
-.cards .span2, .cards .span3, .cards .span4, .cards .span5, .cards .span6, .cards .span7, .cards .span8, .cards .span9, .cards .span10 {
-  height:auto;
-  padding:10px;
-  margin-bottom:2px;
-  text-align:center;
-  overflow:hidden;
-}
-
-
-.cards-bordered .card {
-  background-color:#fff;
-}
-  
-.cards-rounded > div {
-  border-radius:3px;
-}
-.cards-rounded .card {
-  border-radius:3px;
-}
-        
-.cards-borderless .card {
-  border-width:0;
-}
-  
-.card {
-  padding:12px;
-  margin:1%;
-  overflow:hidden;
-  text-align:left;
-}
-
-
-.card p {
- padding:5px;
- padding-left:10px;
- padding-right:10px;
-}
-
-.cards-50 .card {
- width:100%;
- min-height:50px;
-}
-.cards-300 .card {
- min-height:300px;
-}
-.cards-400 .card {
- min-height:400px;
-}
-
-ul.card {
- width:auto; 
- border:1px solid #ddd;
-}
-
-@media (min-width: 767px) { 
-  ul.card {
-   width:auto;
-   display:table;
-  }
-}
-
-.card li {
- height:100%;
- width:100%; 
- list-style:none;
-}
-
-@media (min-width: 767px) { 
-  .card li {
-   display:table-row;
-  }
-}
-
-.card .head {
- height:auto;
-}
-.card .foot {
- height:auto;
- vertical-align:bottom;
-}
-   
-.tile {
-    height:100%;
-    background-color:#eee;
-}
