fixed opening of date picker

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,6 +7,7 @@ Author: Michiel Vancoillie
 @import "bootstrap-responsive";
 @import "bootstrap-wysihtml5";
 @import "bootstrap-select";
+@import "datepicker";
 @import "font-awesome";
 @import "introjs";
 @import "jcrop";
