--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -167,6 +167,25 @@ nav[role=navigation] {
     background-color: #fff;
 }
 
+/* power settings */
+.power{
+    #power-save{
+        float: right;
+    }
+    
+    #dp{
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .datepicker{
+        padding: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        border-radius: 0;
+    }
+}
+
 .error_wrapper{
     background-color: #16b0d8;
     padding-bottom: 20px;
