--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -187,6 +187,19 @@ nav[role=navigation] {
         -moz-border-radius: 0;
         border-radius: 0;
     }
+
+    #power_days_table td,
+    #power_days_table th{
+        text-align: center;
+    }
+
+    .timepicker-from{
+        float: left;
+    }
+
+    .timepicker-to{
+        float: right;
+    }
 }
 
 /* ui timepicker */
