Server side to allow three image modes: portrait, landscape and tall. This code is currently active, but needs further testing. Code that was responsible for only choosing one or two crop windows is disabled for now, meaning all three crop windows are shown.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8620,9 +8620,9 @@ select {
       font-size: 1.25em; }
   .turtle_image #upload-modal input[type="file"]#slide-upload {
     line-height: normal; }
-  .turtle_image #upload-modal #portrait, .turtle_image #upload-modal #landscape {
+  .turtle_image #upload-modal #portrait, .turtle_image #upload-modal #landscape, .turtle_image #upload-modal #tall {
     float: left;
-    width: 48%;
+    width: 31%;
     padding: 1%;
     display: none; }
   .turtle_image #upload-modal .footer {
