--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1062,9 +1062,9 @@ select{
             line-height: normal;
         }
 
-        #portrait, #landscape{
+        #portrait, #landscape, #tall{
             float:left;
-            width:48%;
+            width:31%;
             padding:1%;
             display:none;
         }
