Add layout for power scheduling

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -37,6 +37,10 @@ strong, b{
     margin-right: 10px;
 }
 
+.time{
+    width:50px;
+}
+
 header[role=banner] {
     padding: 20px 0px;
     margin: 0 auto;
