Add basic javascript for power settings

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,6 +10,7 @@ Author: Michiel Vancoillie
 @import "font-awesome";
 @import "introjs";
 @import "jcrop";
+@import "bootstrap-timepicker";
 
 
 html, body{
